Change login credentials for user authentication

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             let username = document.querySelector("input[name='username']").value;
             let password = document.querySelector("input[name='password']").value;
 
-            if (username === "admin" && password === "angel123") {
+            if (username ==="Riena" && password === "laure23") {
             localStorage.setItem("isLoggedIn", "true");
               
          window.location.href ="places.html";
