--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
 	body {
     font-family: Arial, sans-serif;
-    background-image: url("images.jpg");
+    background-image: url("Images/background/20251208_143341.jpg");
     Background-size:cover;
     Background-repeat: no-repeat;
     margin: 0;
