Fix image source paths to use correct casing

--- a/places.html
+++ b/places.html
@@ -227,7 +227,7 @@ body {
 
     <div class="card-grid">
         <div class="card">
-            <img src="images/places/boulevard.jpg">
+            <img src="Images/places/boulevard.jpg">
             <div class="card-content">
                 <h3>Boulevard</h3>
                 <div class="sub">Pagadian City</div>
@@ -239,7 +239,7 @@ body {
         </div>
 
         <div class="card">
-            <img src="images/places/palpalan.jpg">
+            <img src="Images/places/palpalan.jpg">
             <div class="card-content">
                 <h3>Palpalan Peak</h3>
                 <div class="sub">Pagadian City</div>
@@ -252,7 +252,7 @@ body {
 
         <div r
         <div class="card">
-            <img src="images/places/plaza.jpg">
+            <img src="Images/places/plaza.jpg">
             <div class="card-content">
                 <h3>Plaza Luz</h3>
                 <div class="sub">Pagadian City</div>
